--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,36 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Ribbit Romance (Proyect)/Assets/Scenes/Level2.unity
+Ribbit Romance (Proyect)/Assets/Animations/Frog (Ground)/Jump.anim
+Ribbit Romance (Proyect)/Assets/Animations/Frog (Ground)/Player (Ground).controller
+Ribbit Romance (Proyect)/Assets/Characters/Frog (Ground)/daño.meta
+Ribbit Romance (Proyect)/Assets/Characters/Frog (Ground)/daño/sprite_0.png
+Ribbit Romance (Proyect)/Assets/Characters/Frog (Ground)/daño/sprite_0.png.meta
+Ribbit Romance (Proyect)/Assets/Characters/Frog (Ground)/daño/sprite_1.png
+Ribbit Romance (Proyect)/Assets/Characters/Frog (Ground)/daño/sprite_1.png.meta
+Ribbit Romance (Proyect)/Assets/Characters/Frog (Ground)/daño/sprite_2.png
+Ribbit Romance (Proyect)/Assets/Characters/Frog (Ground)/daño/sprite_2.png.meta
+Ribbit Romance (Proyect)/Assets/Characters/Frog (Ground)/daño/sprite_3.png
+Ribbit Romance (Proyect)/Assets/Characters/Frog (Ground)/daño/sprite_3.png.meta
+Ribbit Romance (Proyect)/Assets/Cutscenes.meta
+Ribbit Romance (Proyect)/Assets/Cutscenes/Render Textures/bad.renderTexture.meta
+Ribbit Romance (Proyect)/Assets/Cutscenes/Render Textures/carta.renderTexture.meta
+Ribbit Romance (Proyect)/Assets/Cutscenes/Render Textures/credits.renderTexture.meta
+Ribbit Romance (Proyect)/Assets/Cutscenes/Render Textures/good.renderTexture.meta
+Ribbit Romance (Proyect)/Assets/Imagenes/Nivel 1.meta
+Ribbit Romance (Proyect)/Assets/Imagenes/Nivel 1/CASA.png.meta
+Ribbit Romance (Proyect)/Assets/Imagenes/Nivel 2.meta
+Ribbit Romance (Proyect)/Assets/Imagenes/Nivel 2/Piskel Files/AlgaAQUA.gif.meta
+Ribbit Romance (Proyect)/Assets/Imagenes/Nivel 2/ROCAS 1.png.meta
+Ribbit Romance (Proyect)/Assets/Imagenes/Nivel 2/ROCAS 2.png.meta
+Ribbit Romance (Proyect)/Assets/Prefabs/plataforma plantita.prefab.meta
+Ribbit Romance (Proyect)/Assets/Scenes/BetweenCutscene.unity.meta
+Ribbit Romance (Proyect)/Assets/Scenes/Carta.unity
+Ribbit Romance (Proyect)/Assets/Scenes/Carta.unity.meta
+Ribbit Romance (Proyect)/Assets/Scenes/Credits.unity
+Ribbit Romance (Proyect)/Assets/Scenes/Credits.unity.meta
+Ribbit Romance (Proyect)/Assets/Scenes/EndingBad.unity
+Ribbit Romance (Proyect)/Assets/Scenes/EndingBad.unity.meta
+Ribbit Romance (Proyect)/Assets/Scenes/EndingGood.unity
+Ribbit Romance (Proyect)/Assets/Scenes/Level2.unity
